# ecom-kaspi-starter

./: .env.template  .gitignore  NEON_INTEGRATION_GUIDE.md  README.md  TELEGRAM_SETUP.md  check_status.bat  requirements.txt  service.py  start_service.bat  stop_service.bat
kaspi-ecom-ml/: .env  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
kaspi-ecom-ml/.github/workflows/: ci.yml
kaspi-ecom-ml/apps/api/: auth.py  deps.py  main.py  schemas.py  startup.py
kaspi-ecom-ml/apps/api/core/: config.py  db.py  logging.py  s3.py  security.py  telegram.py
kaspi-ecom-ml/apps/api/routers/: admin.py  alerts.py  dashboard.py  digest.py  health.py  products.py  strategy.py
kaspi-ecom-ml/apps/api/services/: anomaly_service.py  export_service.py  (+2 more)
kaspi-ecom-ml/apps/dashboard/: app.py
kaspi-ecom-ml/dags/: flows.py
kaspi-ecom-ml/db/: alembic.ini
kaspi-ecom-ml/db/alembic/: env.py  script.py.mako
kaspi-ecom-ml/db/sql/: seed_demo.sql
kaspi-ecom-ml/infra/docker/: api.Dockerfile  dashboard.Dockerfile  prefect.Dockerfile  start-api.sh  worker.Dockerfile
kaspi-ecom-ml/infra/grafana/: dashboards.json
kaspi-ecom-ml/infra/loki/: config.yml
kaspi-ecom-ml/infra/prometheus/: prometheus.yml
kaspi-ecom-ml/services/etl/: build_features_daily.py  from_s3.py  load_raw_to_db.py  to_s3.py  utils.py
kaspi-ecom-ml/services/scraper/: scrape_listings.py  scrape_offers.py  scrape_product_page.py  scrape_reviews.py  utils.py
kaspi-ecom-ml/tests/: conftest.py  test_api_basic.py  test_etl.py  test_pricing.py
kaspi-ecom-ml/workers/: celery_app.py  tasks.py
(+61 files in other folders)
