[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaspi-ecom-ml"
version = "0.1.0"
description = "Kaspi e-commerce MVP: API, Dashboard, ETL, ML"
requires-python = ">=3.11"
dependencies = [
  # API & Web
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "requests>=2.31.0",
  "PyJWT>=2.8.0",
  "prometheus-client>=0.20.0",
  "loguru>=0.7.2",
  "tenacity>=8.2.3",
  
  # DB & Storage
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.1",
  "psycopg[binary]>=3.1.19",
  "boto3>=1.34.0",

  # Data & ML
  "pandas>=2.2.0",
  "polars>=1.5.0",
  "numpy>=1.26.0",
  "scikit-learn>=1.5.0",
  "lightgbm>=4.3.0",
  "catboost>=1.2.5",
  # Prophet is heavy to build; keep statsmodels as fallback for MVP
  "statsmodels>=0.14.2",

  # Orchestration & Queue
  "prefect>=2.16.0",
  "celery[redis]>=5.3.6",
  "redis>=5.0.4",

  # Dashboard
  "streamlit>=1.36.0",
  "openpyxl>=3.1.2",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
  "black>=24.4.2",
  "mypy>=1.10.0",
  "pytest>=8.2.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = [
  "E","F","I","UP"
]
ignore = []

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools]
py-modules = []
